lab1/Test/L1-A-13-52.cmm
struct struct uOJ1IYYhPXS9fV0ZB2Q4 sv , dyHaL8rq , 
  O6WA3qLPVutAj , QQ1csRjB55AqnEtS = yV7ZfLvS6N7Gm ;
}OtLkx ( float fuqkuNpi6SgSmxUj4DzJ [ 17347620 ] ) 
  {
  int AGre7ITsPb ;
  if ( x_nTTMM3nItsc )   while ( t3ZXNNEMzAHl )   return 
    YNfFLJBi5j = z2jFGeMgr || elKKRsQ <= Upbt1XP3K89wyx6V 
    + ThLPOg / - ! yNOgXLEeyfBpKqSZ [ d3 && w0PLPrb9i 
    > hEKBzMgH7 * Gk4SoZH9bpgh6 ( WoS , ftbKM6yGkN6NTKx8btA 
    || S < E3seZ - ( s = BTttq && a2vCD5j9nGukKzZtcT >= 
    fHAykJb [ K 842002092.1123346665 ] != - 207539149 
    ) * UICgWR0 ( ) ) ] . xXfORdHmL11mBWYrKp4 - IEtJ2xYdwhJXuhtvSSwn 
    ;


}
int ;
struct {
  struct Y41 {
  }MmE_M93Z5BVOm_8cl7 ;
  struct QDyOKWx2lmItZzKw9W7 c ;
}epaa0mA4TY_e 
;
int vggp_sswg16zeBbCxZ6 int DSra0EuytWiDYV , int fpk 
  ) {
}
int k ( ) {
  cEjfx6XZfzoq1VYKJ3B ;
  if ( TEhYN )   Ffh7HGRbm1x ;
else   if ( dO2Hb3bOXZr4pPCP58jU )   fJR9hcU1n ;


{
    gKhNsLFMKerxcTO_dE ;
    if ( gXfSd ) {
    }else     XGZ4izEPtUCV ;

  }}
int hRqisF4b , VMh5D9MnpTcaybC 

;
int ;
